# tactic

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: main.css
icons/: os-cube.app.icns
src/: DeviceType.rs  api.rs  camera_finder.rs  device_type.rs  main.rs  storage.rs
src/camera_fs/: camera.rs  camera_finder.rs  mod.rs  sys_profiler_usb.rs
src/openspace/: get_upload_state.rs  mod.rs  model.rs  upload_all_files.rs
