[package]
name = "openspace-sync"
version = "0.1.0"
authors = ["Daniel Christensen <daniel@openspace.ai>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dioxus = { version = "0.6.0", features = [] }
dioxus-desktop = "0.6.3"
mountpoints = "0.2"
nusb = "0.2.0"
rusb = "0.9.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.14"
tokio = "1.47.1"
uefi = "0.35.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"   # or "s" for a bit faster but larger
panic = "abort"
strip = true      # requires nightly cargo <1.84; otherwise: strip after build
